--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "application-name",
-  "version": "0.0.1",
+  "name": "website",
+  "version": "0.0.2",
   "private": true,
   "scripts": {
     "start": "node app.js"
   },
   "dependencies": {
-    "express": "3.4.2",
+    "express": "latest",
     "jade": "*",
     "stylus": "*"
   }
